--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "gavin-webpack",
+  "name": "gavin-build",
   "version": "1.0.0",
-  "description": "webpack demo",
+  "description": "",
   "main": "index.js",
   "bin": {
-    "@gavin-webpack": "./bin/webpack.js"
+    "@gavin-build": "./bin/build.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
